@startuml

entity utilisateurs {
  *id : BIGINT
  --
  nom
  telephone
  avatar
  biographie
  mot_de_passe
}

entity vehicules {
  *id
  id_utilisateur
  marque
  modele
}

entity photos_vehicule {
  *id
  id_vehicule
}

entity lieux {
  *id
  nom
  latitude
  longitude
}

entity annonces {
  *id
  id_conducteur
  id_vehicule
  datetime_depart
}

entity reservations {
  *id
  id_annonce
  id_passager
}

entity paiements {
  *id
  id_reservation
}

entity avis {
  *id
  id_reservation
  id_expediteur
  id_destinataire
}

entity conversations {
  *id
}

entity messages {
  *id
  id_conversation
  id_expediteur
  id_destinataire
}

entity favoris {
  *id
  id_utilisateur
  id_annonce
}

entity notifications {
  *id
  id_utilisateur
}

entity logs {
  *id
  id_utilisateur
}

utilisateurs ||--o{ vehicules
vehicules ||--o{ photos_vehicule

utilisateurs ||--o{ annonces : "conducteur"
vehicules ||--o{ annonces
lieux ||--o{ annonces : "depart"
lieux ||--o{ annonces : "arrivee"

annonces ||--o{ reservations
utilisateurs ||--o{ reservations : "passager"

reservations ||--o{ paiements
reservations ||--o{ avis
utilisateurs ||--o{ avis : expediteur
utilisateurs ||--o{ avis : destinataire

utilisateurs ||--o{ messages : expediteur
utilisateurs ||--o{ messages : destinataire
conversations ||--o{ messages

utilisateurs ||--o{ favoris
annonces ||--o{ favoris

utilisateurs ||--o{ notifications
utilisateurs ||--o{ logs

@enduml
